# personal_qt_learning

./: CMakeLists.txt  Main.qml  README.md  authenticator.cpp  authenticator.h  kcm_time.json  main.cpp  myconfig.kcfg  myconfig.kcfgc  naviauthenticator.cpp  naviauthenticator.h  navitoken.cpp  navitoken.h  restclient.cpp  restclient.h  timesettings.cpp  timesettings.hpp
lib/: CMakeLists.txt  print.cpp  print.hpp
package/contents/ui/: main.qml
src/: CMakeLists.txt  main.cpp  window.kcfg  window.kcfgc
src/contents/ui/: main.qml
